Fixes #1422 - Preserve line breaks in cloud-saved routes' description

--- a/IsraelHiking.Web/sources/application/components/sidebar/publicpoi/public-poi-sidebar.component.scss
+++ b/IsraelHiking.Web/sources/application/components/sidebar/publicpoi/public-poi-sidebar.component.scss
@@ -1,3 +1,1 @@
-﻿.break-lines {
-    white-space: pre-line;
-}
+﻿
